uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma-svc
  namespace: monitoring
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
    nodePort: 30000
  selector:
    app: uptime-kuma
  type: NodePort
