uptime-kuma/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: monitoring
spec:
  podSelector: 
    matchExpressions:
    - key: app
      operator: In
      values: 
      - "uptime-kuma"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: access
          operator: In
          values:
          - "true"
    ports: 
    - port: 3001
